argocd/nimbus-be/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-bff
  name: web-bff
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: web-bff
  type: ClusterIP
