argocd/nimbus-be/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web-bff
  labels:
    app: web-bff
spec:
  path: "/"
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: web-bff
